<resources>
    <string name="app_name">FFCalculatorMobile</string>
    <string name="title_home">Résultat</string>
    <string name="title_dashboard">Saison</string>
    <string name="title_notifications">Synthèse</string>
    <string name="test_idclasse">1.24.2</string>
    <string name="test_libelle">Open 2/3</string>
    <string name="test_modifier">Modifier</string>
    <string name="test_supprimer">Supprimer</string>
    <string name="label_elite">Elite</string>
    <string name="label_open1">Open 1</string>
    <string name="label_open2">Open 2</string>
    <string name="label_open3">Open 3</string>
    <string name="label_u19">U19</string>
    <string name="label_u17">U17</string>
    <string name="label_access">Access</string>
    <string name="vue_elite">E</string>
    <string name="vue_open1">O1</string>
    <string name="vue_open2">O2</string>
    <string name="vue_open3">O3</string>
    <string name="vue_u19">U19</string>
    <string name="vue_u17">U17</string>
    <string name="vue_access">A</string>
    <string-array name="classes_for_gen">
        <item>classe generela 1</item>
        <item>classe generale 2</item>
    </string-array>
    <string-array name="classes_for_elite">
        <item>classe Elite 1</item>
        <item>classe Elite 2</item>
        <item>classe Elite 3</item>
    </string-array>
    <string-array name="classes_for_open1">
        <item>Classe Open1 </item>
        <item>classe Open 2</item>
    </string-array>
    <string-array name="classes_for_open2">
        <item>Classe Open2</item>
        <item>classe Open2bis</item>
    </string-array>
    <string-array name="classes_for_open3">
        <item>Classe Open3</item>
        <item>classe Open3bis</item>
    </string-array>
    <string-array name="classes_for_access">
        <item>Classe access1 </item>
        <item>classe access2</item>
    </string-array>
    <string-array name="classes_for_u19">
        <item>Classe U19 </item>
        <item>classe U19</item>
    </string-array>
    <string-array name="classes_for_u17">
        <item>Classe U17 </item>
        <item>classe U17</item>
    </string-array>
    <string name="label_combo_classe_1_12_1">Elite Nationale (1.12.1)</string>
    <string name="label_combo_classe_1_13">Federale U23 (1.13)</string>
    <string name="label_combo_classe_1_40">Circuit Ferme (1.40)</string>
    <string name="label_combo_classe_1_14">Federale U19 (1.14)</string>
    <string name="label_combo_classe_3_48_1">Coupe de France U17 (3.48.1)</string>
    <string name="label_combo_classe_3_54">Coupe de France N1 (3.54)</string>
    <string name="label_combo_classe_3_55">Coupe de France N2 (3.55)</string>
    <string name="label_combo_classe_3_57">Coupe de France N3 (3.57)</string>
    <string name="label_combo_classe_2_12_1E">Elite Nationale Etape (2.12.1E)</string>
    <string name="label_combo_classe_2_12_1G">Elite Nationale General (2.12.1G)</string>
    <string name="label_combo_classe_2_13E">Federale U23 Etape (2.13E)</string>
    <string name="label_combo_classe_2_13G">Federale U23 General (2.13G)</string>
    <string name="label_combo_classe_2_14E">Federale U19 Etape (2.14E)</string>
    <string name="label_combo_classe_2_14G">Federale U19 General (2.14G)</string>
    <string name="label_combo_classe_3_56E">Coupe de France N1 Etape (3.56E)</string>
    <string name="label_combo_classe_3_56G">Coupe de France N1 General (3.56G)</string>
    <string name="label_combo_classe_3_58E">Coupe de France N2 Etape (3.58E)</string>
    <string name="label_combo_classe_3_58G">Coupe de France N2 General (3.58G)</string>
    <string name="label_combo_classe_1_12_4">Elite Open 1 (1.12.4)</string>
    <string name="label_combo_classe_1_12_5">Elite Open 1/2 (1.12.5)</string>
    <string name="label_combo_classe_1_12_6">Elite Open 1/2/3 (1.12.6)</string>
    <string name="label_combo_classe_1_12_7">Elite Open 1/2/3 Access (1.12.7)</string>
    <string name="label_combo_classe_1_24_0">Open 1/2 (1.24.0)</string>
    <string name="label_combo_classe_1_24_1">Open 1/2/3 (1.24.1)</string>
    <string name="label_combo_classe_1_24_2">Open 1/2/3/Access (1.24.2)</string>
    <string name="label_combo_classe_1_28">U23 (1.28)</string>
    <string name="label_combo_classe_1_25_0">Open 2/3 Access (1.25.0)</string>
    <string name="label_combo_classe_1_25_1">Open 3 Access (1.25.1)</string>
    <string name="label_combo_classe_1_32_0">U19 (1.32.0)</string>
    <string name="label_combo_classe_1_31">U17 (1.31)</string>
    <string name="label_combo_classe_2_12_4E">Elite Open 1 (2.12.4E)</string>
    <string name="label_combo_classe_2_12_5E">Elite Open 1/2 (2.12.5E)</string>
    <string name="label_combo_classe_2_12_6E">Elite Open 1/2/3 (2.12.6E)</string>
    <string name="label_combo_classe_2_12_7E">Elite Open 1/2/3 Access (2.12.7E)</string>
    <string name="label_combo_classe_2_12_4G">Elite Open 1 (2.12.4G)</string>
    <string name="label_combo_classe_2_12_5G">Elite Open 1/2 (2.12.5G)</string>
    <string name="label_combo_classe_2_12_6G">Elite Open 1/2/3 (2.12.6G)</string>
    <string name="label_combo_classe_2_12_7G">Elite Open 1/2/3 Access (2.12.7G)</string>
    <string name="label_combo_classe_2_24_0E">Open 1/2 (2.24.0E)</string>
    <string name="label_combo_classe_2_24_1E">Open 1/2/3 (2.24.1E)</string>
    <string name="label_combo_classe_2_24_2E">Open 1/2/3/Access (2.24.2E)</string>
    <string name="label_combo_classe_2_28E">U23 (2.28E)</string>
    <string name="label_combo_classe_2_24_0G">Open 1/2 (2.24.0G)</string>
    <string name="label_combo_classe_2_24_1G">Open 1/2/3 (2.24.1G)</string>
    <string name="label_combo_classe_2_24_2G">Open 1/2/3/Access (2.24.2G)</string>
    <string name="label_combo_classe_2_28G">U23 (2.28G)</string>
    <string name="label_combo_classe_2_25_0E">Open 2/3 Access (2.25.0E)</string>
    <string name="label_combo_classe_2_25_0G">Open 2/3 Access (2.25.0G)</string>
    <string name="label_combo_classe_2_25_1E">Open 3 Access (2.25.1E)</string>
    <string name="label_combo_classe_2_32E">U19 (2.32E)</string>
    <string name="label_combo_classe_2_25_1G">Open 3 Access (2.25.1G)</string>
    <string name="label_combo_classe_2_32G">U19 (2.32G)</string>
    <string name="label_combo_classe_3_41">Championnat de France Amateur Elite CLM (3.41)</string>
    <string name="label_combo_classe_3_49">Championnat de France Amateur (3.49)</string>
    <string name="label_combo_classe_3_42">Championnat de France U23 (3.42)</string>
    <string name="label_combo_classe_3_43">Championnat de France U23 CLM (3.43)</string>
    <string name="label_combo_classe_3_45">Championnat de France U19 (3.45)</string>
    <string name="label_combo_classe_3_46">Championnat de France U19 CLM (3.46)</string>
    <string name="label_combo_classe_3_48">Championnat de France U17 (3.48)</string>
    <string name="label_combo_classe_3_20">Championnat Regional Elite (3.20)</string>
    <string name="label_combo_classe_3_27">Championnat Regional Open 1 (3.27)</string>
    <string name="label_combo_classe_3_21">Championnat Regional U23 (3.21)</string>
    <string name="label_combo_classe_3_22">Championnat Regional Open 2/3 (3.22)</string>
    <string name="label_combo_classe_3_23">Championnat Regional U19 (3.23)</string>
    <string name="label_combo_classe_3_24">Championnat Regional U17 (3.24)</string>
    <string name="label_combo_classe_3_00">Championnat Departemental Elite (3.00)</string>
    <string name="label_combo_classe_3_05">Championnat Departemental Open1 (3.05)</string>
    <string name="label_combo_classe_3_01">Championnat Departemental U23 (3.01)</string>
    <string name="label_combo_classe_3_06">Championnat Departemental Open 2/3 (3.06)</string>
    <string name="label_combo_classe_3_02">Championnat Departemental U19 (3.02)</string>
    <string name="label_combo_classe_3_03">Championnat Departemental U17 (3.03)</string>
    <string name="label_combo_classe_ME1_1">Elite Classe 1 (ME1.1)</string>
    <string name="label_combo_classe_ME1_PRO">Elite UCI ProSeries (ME1.PRO)</string>
    <string name="label_combo_classe_ME1_2">Elite Classe 2 (ME1.2)</string>
    <string name="label_combo_classe_MU1_2">U23 Classe 2 (MU1.2)</string>
    <string name="label_combo_classe_MJ1_1">Junior Classe 1 (MJ1.1)</string>
    <string name="label_combo_classe_ME2_1E">Elite Classe 1 (ME2.1E)</string>
    <string name="label_combo_classe_ME2_1G">Elite Classe 1 (ME2.1G)</string>
    <string name="label_combo_classe_ME2_2E">Elite Classe 2 (ME2.2E)</string>
    <string name="label_combo_classe_MU2_2E">U23 Classe 2 (MU2.2E)</string>
    <string name="label_combo_classe_ME2_2G">Elite Classe 2 (ME2.2G)</string>
    <string name="label_combo_classe_MU2_2G">U23 Classe 2 (MU2.2G)</string>
    <string name="label_combo_classe_MJ2_1E">Junior Classe 1 (MJ2.1E)</string>
    <string name="label_combo_classe_MJ2_1G">Junior Classe 1 (MJ2.1G)</string>
    <string-array name="classes_for_E">
        <item>@string/label_combo_classe_1_12_1</item>
        <item>@string/label_combo_classe_1_13</item>
        <item>@string/label_combo_classe_1_40</item>
        <item>@string/label_combo_classe_3_54</item>
        <item>@string/label_combo_classe_3_55</item>
        <item>@string/label_combo_classe_3_57</item>
        <item>@string/label_combo_classe_2_12_1E</item>
        <item>@string/label_combo_classe_2_12_1G</item>
        <item>@string/label_combo_classe_3_56E</item>
        <item>@string/label_combo_classe_3_56G</item>
        <item>@string/label_combo_classe_3_58E</item>
        <item>@string/label_combo_classe_3_58G</item>
        <item>@string/label_combo_classe_1_12_4</item>
        <item>@string/label_combo_classe_1_12_5</item>
        <item>@string/label_combo_classe_1_12_6</item>
        <item>@string/label_combo_classe_1_12_7</item>
        <item>@string/label_combo_classe_2_12_4E</item>
        <item>@string/label_combo_classe_2_12_5E</item>
        <item>@string/label_combo_classe_2_12_6E</item>
        <item>@string/label_combo_classe_2_12_7E</item>
        <item>@string/label_combo_classe_2_12_4G</item>
        <item>@string/label_combo_classe_2_12_5G</item>
        <item>@string/label_combo_classe_2_12_6G</item>
        <item>@string/label_combo_classe_2_12_7G</item>
        <item>@string/label_combo_classe_3_41</item>
        <item>@string/label_combo_classe_3_49</item>
        <item>@string/label_combo_classe_3_20</item>
        <item>@string/label_combo_classe_3_00</item>
        <item>@string/label_combo_classe_ME1_1</item>
        <item>@string/label_combo_classe_ME1_PRO</item>
        <item>@string/label_combo_classe_ME1_2</item>
        <item>@string/label_combo_classe_ME2_1E</item>
        <item>@string/label_combo_classe_ME2_1G</item>
        <item>@string/label_combo_classe_ME2_2E</item>
        <item>@string/label_combo_classe_ME2_2G</item>
    </string-array>
</resources>