<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/idMenuItemOpen3"
            android:titleCondensed="@string/label_open3"
            android:title="@string/label_open3"
            android:icon="@android:drawable/ic_menu_preferences">
        </item>
        <item android:id="@+id/idMenuItemOpen2"
            android:titleCondensed="@string/label_open2"
            android:title="@string/label_open2"
            android:icon="@android:drawable/ic_menu_preferences"
            >
        </item>
        <item android:id="@+id/idMenuItemOpen1"
            android:titleCondensed="@string/label_open1"
            android:title="@string/label_open1"
            android:icon="@android:drawable/ic_menu_preferences"
            >
        </item>
        <item android:id="@+id/idMenuItemElite"
            android:titleCondensed="@string/label_elite"
            android:title="@string/label_elite"
            android:icon="@android:drawable/ic_menu_preferences"
            >
        </item>
        <item android:id="@+id/idMenuItemU19"
            android:titleCondensed="@string/label_u19"
            android:title="@string/label_u19"
            android:icon="@android:drawable/ic_menu_preferences"
            >
        </item>
        <item android:id="@+id/idMenuItemU17"
            android:titleCondensed="@string/label_u17"
            android:title="@string/label_u17"
            android:icon="@android:drawable/ic_menu_preferences"
            >
        </item>
        <item android:id="@+id/idMenuItemAccess"
            android:titleCondensed="@string/label_access"
            android:title="@string/label_access"
            android:icon="@android:drawable/ic_menu_preferences"
            >
        </item>
    </group>
</menu>

